[task-list] Fix dark mode color for styles.

--- a/packages/docusaurus-theme-task-list/src/theme/package/styles.css
+++ b/packages/docusaurus-theme-task-list/src/theme/package/styles.css
@@ -1,5 +1,5 @@
 html[data-theme='light'],
 html[data-theme='dark'] {
     /* Components */
-    --tl-workbench-color-base: var(--ifm-color-emphasis-0);
+    --tl-workbench-color-base: var(--markdown-color);
 }
